<resources>
    <string name="app_name">UriTrack</string>
    <string name="exportPDF">Export PDF</string>
    <string name="exportCSV">Export CSV</string>
    <string name="exportXLSX">Export XLSX</string>
    <string name="export">Export Data</string>
    <string name="imPort">Import Data</string>
    <string name="clear">Clear Data</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="arrowleft"><![CDATA[<]]></string>
    <string name="arrowright"><![CDATA[>]]></string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="aboutText">UriTrack is an app which enables you to log your urinary events and keep track of your urinary health. The app provides charts with some statistics as well as an ability to export a pdf table you can use to show to your health care professional. \n \nThis app has been created by Viktor Kocur as a free-time project. This is my first android project and I don\'t have enough time to do proper testing, so please understand that there may be bugs, even serious ones. If you have any feedback please contact me at kocurvik@gmail.com.</string>
    <string name="helpText">This app is organized into three tabs: Track, Logs and Analytics. Additional features are available in the menu at top these all have descriptions in their respective dialogs. \n\nTRACK tab enables you to track new events. Please note that the urge event is only meant for an event where no voiding occurred, but an urge feeling was present. \n\nLOGS tab enables you to check and edit your logged events. The six icons under the date enable you to toggle visibility of certain type of events in the logs. You can edit/delete a recorded event by clicking on it in the list. \n\nANALYTICS tab enables you to view a chart with some statistics. Note that you can click on a datapoint within the chart to get the value. This feature is however not always working as intended.</string>
    <string name="measurement_units">Measurement Units</string>
    <string-array name="event_types">
        <item>Urination</item>
        <item>Fluid Intake</item>
        <item>Leak</item>
        <item>Urge</item>
        <item>Catheter</item>
        <item>Note</item>>
    </string-array>


    <string-array name="analytics_types">
        <item>Volume urinated</item>
        <item>Intake volume</item>
        <item>Volume leaked</item>
        <item>Volume voided via Catheter</item>
        <item>Volume voided (all types)</item>
        <item>Daily urinations</item>
        <item>Daily leaks</item>
        <item>Daily drinks/fluid intakes</item>
        <item>Daily non-voiding urges</item>
        <item>Daily catheter voidings</item>
        <item>Average urination volume</item>
        <item>Average urination urge intensity</item>
        <item>Average leak volume</item>
        <item>Average leak urge intensity</item>
        <item>Average intake volume</item>
        <item>Average non-voiding urge intesity</item>
        <item>Average catheter voiding volume</item>
        <item>Average catheter voiding urge intesity</item>
        <item>Intake to voided volume (%)</item>
        <item>Voided to intake volume (%)</item>
        <item>Percent voided via urination </item>
        <item>Percent voided via leaks</item>
        <item>Percent voided via catheter</item>
    </string-array>

    <string-array name="volume_units">
        <item>dcl</item>
        <item>ml</item>
        <item>oz</item>
    </string-array>

    <string-array name="drink_types">
        <item>Water</item>
        <item>Soda</item>
        <item>Juice</item>
        <item>Coffee</item>
        <item>Tea</item>
        <item>Beer</item>
        <item>Wine</item>
        <item>Alcohol</item>
        <item>Soup</item>
        <item>Fruit</item>
        <item>Decaf Coffee</item>
        <item>Decaf Tea</item>
        <item>Milk</item>
        <item>Yogurt</item>
        <item>Ice Cream</item>
        <item>Other</item>
    </string-array>

    <string-array name="date_formats">
        <item>yyyy-MM-dd (2020-02-01)</item>
        <item>dd/MM/yyyy (01/02/2020)</item>
        <item>dd.MM.yyyy (01.02.2020)</item>
        <item>d.M.yyyy (1.2.2020)</item>
        <item>MM/dd/yyyy (02/01/2020)</item>
        <item>MM-dd-yyyy (02-01-2020)</item>
        <item>d MMM yyyy (1 Feb 2020)</item>
        <item>yyyy-MM-dd, EEE (2020-02-01, Sat)</item>
        <item>EEE, d MMM yyyy (Sat, 1 Feb 2020)</item>
        <item>EEE, d.M.yyyy (Sat, 1.2.2020)</item>
        <item>EEE, MM-dd-yyyy (Sat, 02-01-2020)</item>
    </string-array>

    <string-array name="time_formats">
        <item>24-hour (15:24)</item>
        <item>12-hour (3:24 AM)</item>
    </string-array>
</resources>
